--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "slime_guy",
   "version": "1.0.0",
-  "description": "",
+  "description": "![logo](./src/assets/logo_small.png)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development",
-    "watch": "webpack --watch --mode=development",
-    "build": "webpack --mode=production"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "watch": "webpack --watch --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "browserslist": [
     "defaults"
@@ -16,16 +16,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "regenerator-runtime": "^0.13.9"
+  },
+  "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.16.1",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.2.0",
-    "regenerator-runtime": "^0.13.9",
-    "sass": "^1.37.5",
-    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2"
-  }
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JFlec/Slime-Guy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JFlec/Slime-Guy/issues"
+  },
+  "homepage": "https://github.com/JFlec/Slime-Guy#readme"
 }
